--- a/bucksley/style_main.css
+++ b/bucksley/style_main.css
@@ -271,6 +271,7 @@ article p {
 
 
 
+
 @media screen and (min-width: 820px) {
 
     body{padding: 0;
@@ -301,8 +302,12 @@ article p {
         .slider_href {
             font-size: 20px;
         }
-
-
+    article p {
+        font-size: 50px;
+    }
+    article p2 {
+        font-size: 20px;
+    }
 }
 
 
@@ -495,6 +500,14 @@ article p {
         flex-direction: column;
 
     }
+ article a {
+     text-decoration: none;
+     font-size: 30px;
+ }
+ article p2 {
+     font-size: 15px;
+ }
+
 
 }
 
