--- a/bucksley_test/style_main.css
+++ b/bucksley_test/style_main.css
@@ -509,12 +509,18 @@ article p {
  }
 
 article {
-    line-height: 10px;
+    -webkit-overflow-scrolling: touch;
+    line-height: 12px;
 }
+
+
 }
 
 
-
+.last_footer {
+    background-color: black;
+    text-align: center;
+}
 
 
 
